<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MyNu</string>


    <string name="recipe_list_menu_request">Select a recipe for</string>
    <string name="recipe_list_title">Recipes list</string>
    <string name="recipe_list_title_select">Recipes list - Select</string>

    <string name="recipe_duration_unit">min</string>
    <string name="recipe_price_unit">€</string>
    <string name="recipe_score_prefix">Score :</string>


    <string name="recipe_details_title">Recipe</string>
    <string name="recipe_details_name">Recipe name</string>
    <string name="recipe_details_duration">Duration</string>
    <string name="recipe_details_price">Price</string>
    <string name="recipe_details_save_warning">Give a name to the recipe</string>
    <string name="recipe_details_notes_title">Notes about recipe</string>
    <string name="recipe_details_notes">About recipe</string>
    <string name="recipe_details_veggie_off">Carnivore</string>
    <string name="recipe_details_veggie_on">Vegetarian</string>
    <string name="recipe_details_original_off">Normal</string>
    <string name="recipe_details_original_on">Original</string>
    <string name="recipe_details_ordinary_off">Ordinary</string>
    <string name="recipe_details_ordinary_on">Extra ordinary</string>
    <string name="recipe_details_season_off">Summer</string>
    <string name="recipe_details_season_on">Winter</string>
    <string name="recipe_details_temp_off">Hot</string>
    <string name="recipe_details_temp_on">Cold</string>
    <string name="recipe_details_salt_off">Salty</string>
    <string name="recipe_details_salt_on">Sweety</string>
    <string name="recipe_details_ingredient_name">Ingredient</string>
    <string name="recipe_details_ingredient_quantity">Quantity</string>
    <string name="recipe_details_RO_title">Recipe - read only</string>
    <string name="recipe_details_ingredient_title">Ingredients</string>

    <plurals name="recipe_details_guest_nb_unit">
        <item quantity="one" tools:ignore="ImpliedQuantity">guest</item>
        <item quantity="other">guests</item>
    </plurals>


    <string name="recipe_details_invalid_guest_nb">Enter a valid guest number</string>
    <string name="details_nutriscore_hint">Select nutriscore</string>

    <string-array name="recipe_details_meal_time">
        <item>Dinner</item>
        <item>Lunch</item>
        <item>Breakfast</item>
        <item>Snack</item>
    </string-array>


    <string name="filter_popup_veggie_on">vegetarian</string>
    <string name="filter_popup_veggie_off">carnivore</string>
    <string name="filter_popup_temp_off">cold</string>
    <string name="filter_popup_temp_on">hot</string>
    <string name="filter_popup_salty_on">salty</string>
    <string name="filter_popup_salty_off">sweety</string>
    <string name="filter_popup_original_on">original</string>
    <string name="filter_popup_original_off">normal</string>
    <string name="filter_popup_apply">Apply filters</string>

    <string-array name="filter_popup_meal_time">
        <item>No filter</item>
        <item>Dinner</item>
        <item>Lunch</item>
        <item>Breakfast</item>
        <item>Snack</item>
    </string-array>


    <string name="menu_toolbar_title">Menu</string>
    <string name="menu_shop_list">Go to grocery list</string>
    <string name="menu_default_recipe_title">No selected recipe</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_reset_msg">Week menu reset</string>
    <string name="menu_shopping_list_completed">Shopping done</string>
    <string name="menu_locked">Menu locked</string>

    <string name="menu_wk_day_1">Monday</string>
    <string name="menu_wk_day_2">Tuesday</string>
    <string name="menu_wk_day_3">Wednesday</string>
    <string name="menu_wk_day_4">Thursday</string>
    <string name="menu_wk_day_5">Friday</string>
    <string name="menu_wk_day_6">Saturday</string>
    <string name="menu_wk_day_7">Sunday</string>


    <string name="shopping_list_button_back">Back to week menu</string>
    <string name="shopping_list_title">Grocery list</string>
    <string name="shopping_list_items_quantity">Quantity</string>
    <string name="shopping_list_items_name">Item</string>


    <string name="utils_saved">Saved</string>
    <string name="utils_saving_failed">Saving failed</string>
    <string name="utils_deleted">Suppressed</string>
    <string name="utils_deletion_failed">Suppression failed</string>

    <string name="utils_dial_backConfirm_msg">By continuing you will lose modifications</string>
    <string name="utils_dial_option_continue">Continue</string>
    <string name="utils_dial_changeMenu_msg">Do you want modify assigned recipe for</string>
    <string name="utils_dial_option_cancel">Cancel</string>
    <string name="utils_dial_option_suppress">Suppress</string>
    <string name="utils_dial_deleteConfirm_msg">Suppress</string>
    <string name="utils_dial_option_modify">Modify</string>
    <string name="utils_dial_resetMenu_msg">Are you sure to reset week menu ?</string>
    <string name="utils_dial_option_reset">Reset</string>

    <string name="utils_menu_search">Search</string>
    <string name="utils_menu_importexport">Import/Export</string>
    <string name="utils_menu_import">Import</string>
    <string name="utils_menu_export">Export</string>
    <string name="utils_menu_random">Vogel Pick</string>
    <string name="utils_menu_filter">Filter</string>
    <string name="recipe_details_error_input_start">Veuillez entrez </string>
    <string name="recipe_details_error_input_name">un nom valide</string>
    <string name="recipe_details_error_input_quantity">une quantité valide</string>
    <string name="recipe_details_error_input_both">un nom et une quantité valide</string>
    <string name="menu_extra_empty_recipe">Recette supplémentaire</string>
    <string name="menu_extra_title_card">Extra</string>
    <string name="menu_extra_default_recipe_title">Ajouter une recette supplémentaire</string>
    <string name="extra_menu_recipe_cancelled">Recette supprimée</string>
    <string name="shopping_list_modification_impossible">Impossible de modifier un ingrédient lié à une recette</string>

</resources>
