<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:layout_width="match_parent"
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/utils_menu_search"
        app:showAsAction="always|withText"
        app:actionViewClass="android.widget.SearchView"
        tools:ignore="AlwaysShowAction" />



    <item
        android:layout_width="match_parent"
        android:id="@+id/app_bar_filter"
        android:icon="@drawable/ic_filter_white_24dp"
        android:title="@string/utils_menu_filter"
        app:showAsAction="always"/>


    <item
        android:layout_width="match_parent"
        android:id="@+id/app_bar_random"
        android:icon="@drawable/ic_random_white_24dp"
        android:title="@string/utils_menu_random"
        app:showAsAction="always"/>



</menu>